--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 certifi==2021.5.30
 charset-normalizer==2.0.6
+dill==0.3.4
 idna==3.2
+lizard==1.17.9
 numpy==1.21.2
+pandarallel==1.5.3
 pandas==1.3.3
 python-dateutil==2.8.2
 pytz==2021.3
