--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
 gerrit/
-venv/
-1.crawling/scraped_files/
-2.preprocessing/java_files/
-2.preprocessing/methods/
+try_trace/1.crawling/scraped_files/
+try_trace/2.preprocessing/java_files/
+try_trace/2.preprocessing/methods/
 src2abs/
 code_review/
 .ipynb_checkpoints
 lizard/
 masked_methods/
-1.crawling/trash/
-1.crawling/crawl_db.sqlite3
-2.preprocessing/trash/
-3.masking/trash/
-3.masking/masked_files/
+try_trace/1.crawling/trash/
+try_trace/1.crawling/crawl_db.sqlite3
+try_trace/2.preprocessing/trash/
+try_trace/3.masking/trash/
+try_trace/3.masking/masked_files/
 .DS_Store
+crawl_db.sqlite3
+code2seq/
+2.code2seq/original_data/
+2.code2seq/__pycache__/
+2.code2seq/1.cleaned_prev_data/
