--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,14 @@ requests = "==2.26.0"
 six = "==1.16.0"
 urllib3 = "==1.26.7"
 nltk = "*"
+torch = "==1.10.0"
+pytorch-lightning = "==1.5.1"
+torchmetrics = "==0.6.0"
+tqdm = "==4.62.3"
+wandb = "==0.12.6"
+omegaconf = "==2.1.1"
+commode-utils = "==0.4.1"
+tensorflow = "*"
 
 [dev-packages]
 ipykernel = "*"
